# eduvoice-ai

./: .replit  README.md  asgi.py  fix_document_schema.sql  main.py  migration.sql  models.py  oauth.py  pyproject.toml  requirements.txt  simple_extract.py  test_extraction.py  translation_migration.sql  update_schema.py  wsgi.py
attached_assets/: Pasted--500-Error-Unexpected-Error-Details-This-Session-s-transaction-has-been-rolled-back-due-to-a-p-1746473776259.txt  content-1746453664649.md
replit_agent/: architecture.md
static/css/: accessibility.css  skeleton-loader.css  styles.css  visualizer.css
static/js/: accessibility.js  audio-visualizer.js  floating-action-button.js  skeleton-loader.js
static/summaries/: 04_Verben_mit_Dativ-_und_Akkusativobjekt_561157a7.txt  04_Verben_mit_Dativ-_und_Akkusativobjekt_578ab117.txt  04_Verben_mit_Dativ-_und_Akkusativobjekt_9b212693.txt  Muster-DSH_LV_Aufgaben_0628dfb3.txt  Muster-DSH_LV_Aufgaben_7383b585.txt  TP-Aufgaben_1d6ae65f.txt  TP-Aufgaben_1f2766ae.txt  TP-Aufgaben_1f4872d8.txt  TP-Aufgaben_5cfb8b8d.txt  TP-Aufgaben_77b22690.txt  TP-Aufgaben_80f170a4.txt  TP-Aufgaben_9cffac80.txt  TP-Aufgaben_a83eb6e3.txt  TP-Aufgaben_e7abc989.txt  Uni-Oldenburg-TP-Losungen_90f0177b.txt  summary_2.txt
templates/: dashboard.html  document.html  document_chat.html  document_questions.html  error.html  flashcards.html  index.html  layout.html  preview.html  profile.html  quiz.html  settings.html  summary.html  upload.html  upload_success.html  usage_stats.html
templates/components/: floating_action_button.html  navbar.html
