[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gtts>=2.5.4",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "openai>=1.77.0",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.25.5",
    "python-docx>=1.1.2",
    "uvicorn>=0.34.2",
    "oauthlib>=3.2.2",
    "authlib>=1.5.2",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
]
